# HitoriSolver

./: .gitignore  .pre-commit-config.yaml  README.md  Solver.py  main.py  pyproject.toml
hitori_solver/: field.py  field_generator.py  handler.py  main.py  main_gui.py  main_gui_test.py  shared_models.py  solver.py  table.py  tiling.py  window_menu.py
hitori_solver/CLI/: handler.py  main_cli.py
hitori_solver/GUI/: main_gui.py  table.py  window_menus.py
hitori_solver/hitori/: field.py  field_generator.py  shared_models.py  solver.py  tiling.py
src/: Field.py  Main_program.py  Solver.py  Tiling.py
tests/: TestField.py  TestSolver.py  test_Solver.py  test_field.py  test_generator.py  test_solver.py  test_tiling.py
