[project]
name = "hitorisolver"
version = "0.1.0"
description = "\"Program, solving 'hitori' puzzle\""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "pylint (>=3.3.6,<4.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"

enable_error_code = ["truthy-bool", "ignore-without-code"]
check_untyped_defs = true
strict_optional = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true
ignore_missing_imports = true
follow_imports = "normal"
follow_imports_for_stubs = true