[project]
name = "hitorisolver"
version = "0.1.0"
description = "\"Program, solving 'hitori' puzzle\""
authors = [
    {name = "Maxim",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "pylint (>=3.3.6,<4.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"

enable_error_code = ["truthy-bool", "ignore-without-code"]
check_untyped_defs = true
strict_optional = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true
ignore_missing_imports = true
follow_imports = "normal"
follow_imports_for_stubs = true

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
mypy = "^1.15.0"

[tool.flake8]
max-line-length = 120
